--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,61 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Default URL" />
+
+    <EditText
+        android:id="@+id/urlEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
-
-        <EditText
-            android:id="@+id/urlEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:hint="@string/default_url_address"
-            android:inputType="textUri" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:inputType="textUri" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/barcode_port_label"
-        android:layout_marginBottom="8dp" />
+        android:text="Select Barcode Port" />
 
     <Spinner
         android:id="@+id/barcodePortSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/rfid_port_label"
-        android:layout_marginBottom="8dp" />
+        android:text="Select Barcode Speed" />
+
+    <Spinner
+        android:id="@+id/barcodeSpeedSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select RFID Port" />
 
     <Spinner
         android:id="@+id/rfidPortSpinner"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp" />
+        android:text="Select RFID Speed" />
+
+    <Spinner
+        android:id="@+id/rfidSpeedSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
 
     <CheckBox
         android:id="@+id/kioskModeCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/kiosk_mode_label"
-        android:layout_marginBottom="16dp" />
+        android:text="Enable Kiosk Mode" />
 
     <Button
         android:id="@+id/saveButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/settings_save_label" />
-
+        android:text="Save" />
 </LinearLayout>
