validní fungování okna pro FingerprintActivity.kt

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -9,4 +9,8 @@
         android:id="@+id/nav_settings"
         android:icon="@drawable/settings_configuration"
         android:title="@string/Settings" />
+    <item
+        android:id="@+id/nav_fingerprint"
+        android:icon="@drawable/ic_fingerprint"
+        android:title="@string/nav_fingerprint" />
 </menu>
