--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
+    <files-path name="my_files" path="." />
+    <cache-path name="my_cache" path="." />
     <external-path name="external_files" path="." />
+    <external-files-path name="my_external_files" path="." />
+    <external-cache-path name="my_external_cache" path="." />
+    <external-media-path name="my_external_media" path="." />
 </paths>
