--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:baselineAligned="false"
     android:padding="16dp">
 
     <LinearLayout
@@ -30,12 +31,13 @@
             android:id="@+id/buttonEdit"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="Editovat"/>
+            android:text="@string/editFPInfo"/>
+
         <Button
             android:id="@+id/buttonDelete"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="Smazat"/>
+            android:text="@string/deleteFP" />
 
         <View
             android:layout_width="0dp"
@@ -46,7 +48,7 @@
             android:id="@+id/buttonClose"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="Zavřít"/>
+            android:text="@string/closeWindow"/>
     </LinearLayout>
 
 </LinearLayout>
